# Rust-Discord-Bot

./: .env  .gitignore  Cargo.toml  README.md  op_run.sh
src/: main.rs
