[package]
name = "basic_rust_discord_bot"
version = "0.1.0"
authors = ["slayernominee <check on github>"]
edition = "2021"

[dependencies]
tokio = { version = "1.0.3", features = ["macros", "rt-multi-thread"] }
colored = "2.0.0"

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]
